etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_IVPN
-A ufw-user-input -i IVPN -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_IVPN
-A ufw-user-output -o IVPN -j ACCEPT

### tuple ### allow udp any 37.120.130.58 any 0.0.0.0/0 out
-A ufw-user-output -p udp -d 37.120.130.58 -j ACCEPT

### tuple ### allow udp any 0.0.0.0/0 any 37.120.130.58 in
-A ufw-user-input -p udp -s 37.120.130.58 -j ACCEPT

### tuple ### allow udp any 87.101.92.29 any 0.0.0.0/0 out
-A ufw-user-output -p udp -d 87.101.92.29 -j ACCEPT

### tuple ### allow udp any 0.0.0.0/0 any 87.101.92.29 in
-A ufw-user-input -p udp -s 87.101.92.29 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_vpn0
-A ufw-user-input -i vpn0 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_vpn0
-A ufw-user-output -o vpn0 -j ACCEPT

### tuple ### allow any any 132.210.237.13 any 0.0.0.0/0 out
-A ufw-user-output -d 132.210.237.13 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 132.210.237.13 in
-A ufw-user-input -s 132.210.237.13 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 132.210.248.2 in
-A ufw-user-input -s 132.210.248.2 -j ACCEPT

### tuple ### allow any any 132.210.248.2 any 0.0.0.0/0 out
-A ufw-user-output -d 132.210.248.2 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 132.210.237.14 in
-A ufw-user-input -s 132.210.237.14 -j ACCEPT

### tuple ### allow any any 132.210.237.14 any 0.0.0.0/0 out
-A ufw-user-output -d 132.210.237.14 -j ACCEPT

### tuple ### allow any any 132.210.7.170 any 0.0.0.0/0 out
-A ufw-user-output -d 132.210.7.170 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 132.210.7.170 in
-A ufw-user-input -s 132.210.7.170 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_virbr0
-A ufw-user-output -o virbr0 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_virbr0
-A ufw-user-input -i virbr0 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_virbr0!out_IVPN
-A ufw-user-forward -i virbr0 -o IVPN -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_IVPN!out_virbr0
-A ufw-user-forward -i IVPN -o virbr0 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
